# INF2004_Embedded_Systems_Automated_Car

./: .gitignore  .gitmodules  CMakeLists.txt
Project/: CMakeLists.txt
Project/Source/: 2201354.c  algorithms.c
src/: CMakeLists.txt  lwipopts.h  main.c
src/encoder/: CMakeLists.txt  README.md  encoder_driver.c  encoder_driver.h  main.c
src/fusion/: CMakeLists.txt  motor_and_encoder.c
src/infrared/: CMakeLists.txt  README.md  infrared.c  infrared.h  main.c  readadc.c
src/integration/: CMakeLists.txt  FreeRTOSConfig.h  htmldata.c  lwipopts.h  main.c  ssi.h
src/integration/html_files/: index.shtml
src/lab5/rtos/: CMakeLists.txt
src/lab5/rtos/freertos/: CMakeLists.txt
src/lab5/rtos/freertos/lab5/: 2201354.c  CMakeLists.txt  zz.c
src/magnetometer/: CMakeLists.txt  README.md  lsm303dlh.c  lsm303dlh.h  magnetometer.c  magnetometer_driver.c  magnetometer_driver.h  main.c
src/mapping/: map  mapper.c  mapper.h  set.c  set.h
src/motor/: CMakeLists.txt  README.md  main.c  motor_driver.c  motor_driver.h  pid.c  pid.h
src/pathfinder/: CMakeLists.txt  algorithms.c  algorithms.h
src/project/: CMakeLists.txt
src/project/rtos/freertos/: CMakeLists.txt
src/project/rtos/freertos/src/: 2201354.c
src/ultrasonic/: CMakeLists.txt  README.md  main.c  rtosfile.c  ultrasonic.c  ultrasonic.h
src/webserver/: webserver.c  webserver.h
src/webserver/html_files/: index.shtml
src/webserver_and_wifi/: CMakeLists.txt  cgi.h  htmldata.c  ssi.h  webserver.c
src/wifi/: CMakeLists.txt  README.md  lwipopts.h  socket.c  socket_client_mac.c  socket_client_win.c  test_wifi.c  wifi.c  wifi_driver.c  wifi_new.c  win_socket_client.c
